tree-sitter-lane/test/corpus/declarations.txt
==================
Declarations
==================

#2D
#prec 0.002
provided Float time
construct Object shell = Ball3D(r=1 + time)
radius = 1 + time
shape = shell + (radius, 0, 0)
construct generated = Ball3D(r=radius)
Object moved = shell + (1, 2, 3)
Func(Float, Mat3) spin = ((1, 0, 0), (0, 1, 0), (0, 0, 1))
Hom(Float, Float) warp = spin
provided Hom(R3 x R3, R3) cross
const Object output = spin(time) * moved

---

(source_file
  (directive)
  (directive)
  (input_declaration
    (type_identifier)
    (identifier))
  (binding_declaration
    (gen_modifier)
    (type_identifier)
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (named_argument
          (identifier)
          (binary_expression
            (number)
            (identifier))))))
  (inferred_binding_declaration
    (identifier)
    (binary_expression
      (number)
      (identifier)))
  (inferred_binding_declaration
    (identifier)
    (binary_expression
      (identifier)
      (tuple_expression
        (identifier)
        (number)
        (number))))
  (inferred_binding_declaration
    (gen_modifier)
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (named_argument
          (identifier)
          (identifier)))))
  (binding_declaration
    (type_identifier)
    (identifier)
    (binary_expression
      (identifier)
      (tuple_expression
        (number)
        (number)
        (number))))
  (binding_declaration
    (function_type
      (type_identifier)
      (type_identifier))
    (identifier)
    (tuple_expression
      (tuple_expression
        (number)
        (number)
        (number))
      (tuple_expression
        (number)
        (number)
        (number))
      (tuple_expression
        (number)
        (number)
        (number))))
  (binding_declaration
    (hom_type
      (type_identifier)
      (type_identifier))
    (identifier)
    (identifier))
  (input_declaration
    (hom_type
      (product_type
        (type_identifier)
        (type_identifier))
      (type_identifier))
    (identifier))
  (binding_declaration
    (gen_modifier)
    (type_identifier)
    (identifier)
    (binary_expression
      (call_expression
        (identifier)
        (argument_list
          (identifier)))
      (identifier))))

==================
Comments
==================

// animation clock
provided R time // phase
const Object output = Ball3D(r=1)

---

(source_file
  (comment)
  (input_declaration
    (type_identifier)
    (identifier))
  (comment)
  (binding_declaration
    (gen_modifier)
    (type_identifier)
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (named_argument
          (identifier)
          (number))))))

==================
Array Declarations
==================

provided Array(R) weights
Array(R) a = Array(1, 2, 3)
Func(Float, Array(R)) pair = Array(sin, cos)
Mat{n}x{m} matrix = eye{n}
provided Hom(Ray, {Color}) color_ray

---

(source_file
  (input_declaration
    (array_type
      (type_identifier))
    (identifier))
  (binding_declaration
    (array_type
      (type_identifier))
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (number)
        (number)
        (number))))
  (binding_declaration
    (function_type
      (type_identifier)
      (array_type
        (type_identifier)))
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (identifier)
        (identifier))))
  (binding_declaration
    (type_identifier
      (name_template_slot
        (template_slot_content))
      (name_template_slot
        (template_slot_content)))
    (identifier)
    (identifier
      (name_template_slot
        (template_slot_content))))
  (input_declaration
    (hom_type
      (type_identifier)
      (generic_type
        (identifier)))
    (identifier)))

==================
Provided Categories
==================

provided Grp G
provided G a
provided G b
G product = a * b

---

(source_file
  (provided_category_declaration
    (category_identifier)
    (identifier))
  (input_declaration
    (type_identifier)
    (identifier))
  (input_declaration
    (type_identifier)
    (identifier))
  (binding_declaration
    (type_identifier)
    (identifier)
    (binary_expression
      (identifier)
      (identifier))))

==================
Product Type Declarations
==================

Grp G = Isom3 x Isom2 <m, n>
const Ab Pair = R2 x R3
provided G g
provided Pair p

---

(source_file
  (product_type_declaration
    (category_type
      (category_identifier))
    (identifier)
    (product_type
      (type_identifier)
      (type_identifier))
    (product_field_list
      (identifier)
      (identifier)))
  (product_type_declaration
    (gen_modifier)
    (category_type
      (category_identifier))
    (identifier)
    (product_type
      (type_identifier)
      (type_identifier)))
  (input_declaration
    (type_identifier)
    (identifier))
  (input_declaration
    (type_identifier)
    (identifier)))
