tree-sitter-lane/test/corpus/examples.txt
==================
3D Example
==================

provided R time

R3 p = (0, 0, 0)
R3 p2 = (2, 1, .3)
R3 p3 = (3, -3, -.4)
R3 p4 = (5, 1., .1)

Object b1 = Ball3D(r=.1e-0)
Object b2 = Ball3D(.4e0)
Object b3 = Ball3D(.3)
Object b4 = Ball3D(.2)

Object v12 = Segment3D(p, p2)
Object v23 = Segment3D(p2, p3)
Object v34 = Segment3D(p3, p4)

construct Object v = union(b1, b2, b3, b4)
construct Object e = union(v12, v23, v34)
Object2D profile = Segment2D(a=(0, -1), b=(0, 1))
Object lathe = revolution(.25)(profile)

const Object output = smoothUnion(.5)(v, e)

---

(source_file
  (input_declaration
    (type_identifier)
    (identifier))
  (binding_declaration
    (type_identifier)
    (identifier)
    (tuple_expression
      (number)
      (number)
      (number)))
  (binding_declaration
    (type_identifier)
    (identifier)
    (tuple_expression
      (number)
      (number)
      (number)))
  (binding_declaration
    (type_identifier)
    (identifier)
    (tuple_expression
      (number)
      (unary_expression
        (number))
      (unary_expression
        (number))))
  (binding_declaration
    (type_identifier)
    (identifier)
    (tuple_expression
      (number)
      (number)
      (number)))
  (binding_declaration
    (type_identifier)
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (named_argument
          (identifier)
          (number)))))
  (binding_declaration
    (type_identifier)
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (number))))
  (binding_declaration
    (type_identifier)
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (number))))
  (binding_declaration
    (type_identifier)
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (number))))
  (binding_declaration
    (type_identifier)
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (identifier)
        (identifier))))
  (binding_declaration
    (type_identifier)
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (identifier)
        (identifier))))
  (binding_declaration
    (type_identifier)
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (identifier)
        (identifier))))
  (binding_declaration
    (gen_modifier)
    (type_identifier)
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (identifier)
        (identifier)
        (identifier)
        (identifier))))
  (binding_declaration
    (gen_modifier)
    (type_identifier)
    (call_expression
      (identifier)
      (argument_list
        (identifier)
        (identifier)
        (identifier))))
  (binding_declaration
    (type_identifier)
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (named_argument
          (identifier)
          (tuple_expression
            (number)
            (unary_expression
              (number))))
        (named_argument
          (identifier)
          (tuple_expression
            (number)
            (number))))))
  (binding_declaration
    (type_identifier)
    (identifier)
    (call_expression
      (call_expression
        (identifier)
        (argument_list
          (number)))
      (argument_list
        (identifier))))
  (binding_declaration
    (gen_modifier)
    (type_identifier)
    (identifier)
    (call_expression
      (call_expression
        (identifier)
        (argument_list
          (number)))
      (argument_list
        (identifier)
        (identifier)))))
