tree-sitter-lane/test/corpus/expressions.txt
==================
Expressions
==================

const Object output = smoothUnion(0.25)(a, b, c)

---

(source_file
  (binding_declaration
    (gen_modifier)
    (type_identifier)
    (identifier)
    (call_expression
      (call_expression
        (identifier)
        (argument_list
          (number)))
      (argument_list
        (identifier)
        (identifier)
        (identifier)))))

==================
Named Arguments And Tuples
==================

const Object output = Box3D(a=2, b=1, c=3) + (-1, -2, -3)

---

(source_file
  (binding_declaration
    (gen_modifier)
    (type_identifier)
    (identifier)
    (binary_expression
      (call_expression
        (identifier)
        (argument_list
          (named_argument
            (identifier)
            (number))
          (named_argument
            (identifier)
            (number))
          (named_argument
            (identifier)
            (number))))
      (tuple_expression
        (unary_expression
          (number))
        (unary_expression
          (number))
        (unary_expression
          (number))))))

==================
Scientific Notation
==================

const Object output = Ball3D(r=1e-1) + (2e0, .5e+1, 3E-1)

---

(source_file
  (binding_declaration
    (gen_modifier)
    (type_identifier)
    (identifier)
    (binary_expression
      (call_expression
        (identifier)
        (argument_list
          (named_argument
            (identifier)
            (number))))
      (tuple_expression
        (number)
        (number)
        (number)))))

==================
Object Getters
==================

R d = shell.sdf(p)
R3 g = gradient(shell.sdf)(p) + shell.grad(p)

---

(source_file
  (binding_declaration
    (type_identifier)
    (identifier)
    (call_expression
      (field_access_expression
        (identifier)
        (identifier))
      (argument_list
        (identifier))))
  (binding_declaration
    (type_identifier)
    (identifier)
    (binary_expression
      (call_expression
        (call_expression
          (identifier)
          (argument_list
            (field_access_expression
              (identifier)
              (identifier))))
        (argument_list
          (identifier)))
      (call_expression
        (field_access_expression
          (identifier)
          (identifier))
        (argument_list
          (identifier))))))

==================
Conditional Expressions
==================

const Hom(R2, R4) color = if(shape.sdf > 0) foreground else background
const R masked = if(inside) distance

---

(source_file
  (binding_declaration
    (gen_modifier)
    (hom_type
      (type_identifier)
      (type_identifier))
    (identifier)
    (conditional_expression
      (binary_expression
        (field_access_expression
          (identifier)
          (identifier))
        (number))
      (identifier)
      (identifier)))
  (binding_declaration
    (gen_modifier)
    (type_identifier)
    (identifier)
    (conditional_expression
      (identifier)
      (identifier))))

==================
Array Calls And Bracket Literals
==================

Array(R) values = concat(a, Array(4, 5))
const Vec3 axis = [0, 1, 0]
const R y = e{3}{2}.y
const Object output = values[size(a) - 1]

---

(source_file
  (binding_declaration
    (array_type
      (type_identifier))
    (identifier)
    (call_expression
      (identifier)
      (argument_list
        (identifier)
        (call_expression
          (identifier)
          (argument_list
            (number)
            (number))))))
  (binding_declaration
    (gen_modifier)
    (type_identifier)
    (identifier)
    (bracket_literal
      (number)
      (number)
      (number)))
  (binding_declaration
    (gen_modifier)
    (type_identifier)
    (identifier)
    (field_access_expression
      (identifier
        (name_template_slot
          (template_slot_content))
        (name_template_slot
          (template_slot_content)))
      (identifier)))
  (binding_declaration
    (gen_modifier)
    (type_identifier)
    (identifier)
    (index_expression
      (identifier)
      (binary_expression
        (call_expression
          (identifier)
          (argument_list
            (identifier)))
        (number)))))

==================
Raw GLSL Closure Placeholders
==================

#module
const Hom(Object, Hom(Ray, Hit)) raytrace = obj |-> "Hit raytrace(Ray ray) { float _d = ${obj.sdf}(ray.origin); return Hit(ray.origin, ${obj.grad}(ray.origin), _d, true); }"

---

(source_file
  (directive
    (directive_token))
  (binding_declaration
    (gen_modifier)
    (hom_type
      (type_identifier)
      (hom_type
        (type_identifier)
        (type_identifier)))
    (identifier)
    (closure_expression
      (identifier)
      (string
        (string_content)
        (placeholder
          (identifier)
          (identifier))
        (string_content)
        (placeholder
          (identifier)
          (identifier))
        (string_content)))))

==================
Product Closure Parameters
==================

const Hom(R x R, R) g = (x, y) |-> sin(x + y)

---

(source_file
  (binding_declaration
    (gen_modifier)
    (hom_type
      (product_type
        (type_identifier)
        (type_identifier))
      (type_identifier))
    (identifier)
    (closure_expression
      (closure_parameter_list
        (identifier)
        (identifier))
      (call_expression
        (identifier)
        (argument_list
          (binary_expression
            (identifier)
            (identifier)))))))
